sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:23: error: Unmatched closing brace '}' ignored here
    echange(pivot,piv2)}
                       ^