sort.basic.selection.AlgSelectionSort.scala.code
def plusPetit(deb:Int):Int={
	val lgr=getNombreValeurs()
  var a=deb
  var Amin=getValeur(deb)
  for (b<-deb to lgr-1){
    if (getValeur(b)<Amin){Amin=getValeur(b);a=b}
  }
  return a
}





def selectionSort() {
	val lgr=getNombreValeurs()
  
  
  for(pivot<-0 to lgr-1){
    var piv2=plusPetit(pivot)
    if (pivot!=piv2){}
    echange(pivot,piv2)}
  }}